# shopify-tracker

./: .gitignore  README.md  migrate.py  requirements.txt  setup.cfg
data/sql/: dharmabums.db.sql  engageind.db.sql  hayabusafight.db.sql  hyperfly.db.sql  jitsy.db.sql  jlathletics.db.sql  kozii.db.sql  mmafightstore.db.sql  nimbleactivewear.db.sql  shoyoroll.db.sql  slixaustralia.db.sql  tatamifightwear.db.sql  twinsix.db.sql  volaresports.db.sql
jupyter-for-test/: www_impisportswear_com_au_.ipynb
src/: __main__.py  headers.py  inventory.py  linkHandler.py  link_handler.py  logger.py  main.py  parser.py  parsers.py  runner.py  sheet.py  tracker.py
src/app/: main.py
src/auth/: auth.py  user.py  views.py
src/config/: settings.py  sheets.json  trackers.json  user_agents.json
src/db/: models.py  utils.py
