[metadata]
name = shopify-tracker
version = 0.0.1
description = a tracker for shopify stores
url = https://github.com/longthp/shopify-tracker

[options]
packages = find:
install_requires =
	httpx
	tenacity
	beautifulsoup4

	pandas
	pyarrow
	gspread
	SQLAlchemy

	dash
	dash-bootstrap-components
	dash-ag-grid
python_requires = >=3.9

[options.packages.find]
exclude =
	tests*
	testings*

[options.entry_points]
console_scripts =
	st-runner = src.runner:main
	st-sheet = src.sheet:main
